# GalaxyOS-desktop

./: .cnb.yml  .coding-ci.yml  .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.buildkit  Dockerfile.ci  Dockerfile.gateway  Dockerfile.kernel  GalaxyOS_模块技术说明文档_v0.3.0.docx  LICENSE  Makefile  README.md  SKILL.md  UBIQUITOUS_LANGUAGE.md  VERSIONING.md  conftest.py  docker-compose.yml  galaxyos-mcp.spec  migrate_memory_core.py  mypy.ini  nuitka-build.py  nuitka-package-config.yml  package-lock.json  package.json  path_resolver.py  pyproject.toml  requirements-core.txt  requirements-heavy-cpu.txt  requirements-heavy-cuda.txt  requirements-heavy.txt  requirements.txt  (+1 more)
.github/: CODEOWNERS
backups/: backup_manager.py
config/: dsl_bridge_mappings.json  evolution_triggers.json  integration_config.json  llm_config.example.json  module_dependencies.json  openclaw.json  performance_config.json  priority_config.json  system_config.json
core/: prompt_integration.py  unified_vector_store.py
data/: rccam_classifier_v1.pkl
desktop-native/: CMakeLists.txt  CPackPlatformConfig.cmake  vcpkg.json
desktop-native/include/: i18n_bridge.h  native_config.h  native_event_bus.h  native_ipc_channel.h  native_logger.h  native_process_manager.h  native_sse_client.h
desktop-native/scripts/: galaxyos.desktop  post-remove.sh  pre-install.sh  pre-remove.sh
desktop-native/src/: galaxyos_app.cpp  i18n_bridge.cpp  native_config.cpp  native_event_bus.cpp  native_ipc_channel.cpp  native_logger.cpp  native_process_manager.cpp  native_sse_client.cpp
desktop-native/tests/: CMakeLists.txt  test_main.cpp
desktop-shell/: .gitignore  README.md  csp-config.js  esbuild.config.mjs  index.html  package-lock.json  package.json  server.js  tsconfig.json  vite.config.js
desktop-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop-tauri/minimal-webview/: index.html
desktop-tauri/native_translations/: en.json  zh.json
desktop-tauri/src/: backend.rs  commands.rs  dsl_bridge.rs  eui_neo.rs  eui_neo_ffi.rs  i18n_bridge.rs  inject_cognitive_panel.js  lib.rs  main.rs  render_channel.rs  render_pipeline.rs  spring_animation.rs  sse_client.rs  tokui_renderer.rs
docs/: 2026-05-14-architecture-merge.md  API.md  HLD-AgentCore-DesktopIntegration-202607191437.md  env-vars.md  neural-network-expansion-plan.md  neural-network-parallel-plan.md  paper-roadmap.md  skill-integration-plan.md  system-architecture-v2.md  system-architecture.md  xiaoyi-claw-architecture-full.md  xiaoyi-claw-core-architecture-v2.0.0.md  xiaoyi-claw-core-architecture-v3.0.0.md  xiaoyi-claw-core-architecture-v3.1.0.md  xiaoyi-claw-core-architecture-v3.4.0.md  xiaoyi-claw-core-architecture-v4.2.md  xiaoyi-claw-core-architecture-v4.4.md  xiaoyi-claw-core-architecture-v4.5.md  xiaoyi-claw-core-architecture-v4.6.md  xiaoyi-claw-llm-integration-plan.md
examples/: 01_basic_usage.py  02_memory_system.py  03_task_orchestration.py
execution/: skill_adapter_gateway.py
extensions/galaxyos/native/: .gitignore  Cargo.toml
extensions/galaxyos/native/.cargo/: config.toml
extensions/galaxyos/native/src/: lib.rs  main.rs
galaxyos/: __init__.py
hooks/: HOOK.md  handler.js  handler.js.draft_backup
models/: cfc_gat.pt  synapse_pretrain.pth
orchestration/: task_engine.py  workflow_engine.py
patches/: apply_cspl_patch.sh  cspl_patch.py
scripts/: DAGIntegration_addon.py  _fix_imports.py  _fix_pathresolver_refs.py  _refactor_pass2.py  _refactor_pass3.py  _refactor_pass4.py  _refactor_paths.py  _verify_refactor.py  batch_init_ncps_neurons.py  causal_reasoning.py  ci-dry-run.sh  claw_worker.py  dag_context_manager.py  fast_pil.py  gateway_client.py  iclr_openreview_search.py  index_bk.js  install_galaxyos.py  install_wizard.py  intelligent_thinking_trigger.py  memory_synapse_network.py  nlp_enhanced.py  paper_integration.py  retrieval_hub.py  semantic_entropy.py  smart_processor.py  spatial_topology.py  tdai_vector_embeddings.py  temporal_kg.py  thinking_enhanced.py  unified_entry.py  v4_services.py  verify_nuitka_build.py  (+1 more)
skills/llm-memory-integration/core/: README.md  adaptive_ltp_ltd.py  biorhythm_sleep_consolidation.py  blob_arena.py  capability_registry.py  cfc_inference.py  claw_worker.py  create_v2_modules.py  dag_context_manager.py  deepseek_ocr2_adapter.py  dreaming_bridge.py  enhanced_hallucination_guard.py  exceptions.py  four_advancements.py  full_integration_plan.md  gat_layer.py  gnn_graph_builder.py  graphsage_layer.py  hierarchical_memory.py  hugepage_manager.py  install.json  io_optimizer.py  irq_isolator.py  knowledge_graph_gnn.py  llm_client.py  llm_optimizer.py  llm_streaming.py  memory_consolidation.py  mkl_accelerator.py  neural_pipeline.py  onnx_embedding.py  optimization_integration.py  platform_adapter.py  pyproject.toml  rag_failure_detector.py  realtime_scheduler.py  reranker.py  retrieval_evaluator.py  retrieval_hub.py  sandbox_manager.py  (+11 more)
skills/llm-memory-integration/core/api/: __init__.py
skills/llm-memory-integration/core/integration/: __init__.py  unified_vector_store.py
skills/llm-memory-integration/core/memory/: importance_scorer.py
skills/llm-memory-integration/core/privileged/: __init__.py  ann_selector.py  context_compressor.py  cross_lingual.py  llm_client.py  model_performance.py  multimodal_search.py  multiresolution_search.py  power_manager.py  smart_memory_update.py  sqlite_ext.py  sqlite_vec.py  unified_cache.py  update_l3_profile.py  update_persona.py
skills/llm-memory-integration/core/rails/: __init__.py  rails_config.json
skills/llm-memory-integration/core/scripts/: prebuild.py
skills/llm-memory-integration/core/scripts_core/: embedding.py
skills/news-extractor/: SKILL.md  pyproject.toml
skills/news-extractor/references/: platform-patterns.md
skills/news-extractor/scripts/: detector.py  extract_news.py
skills/news-extractor/scripts/crawlers/: __init__.py  bbc.py  cnn.py  detik.py  lenny.py  naver.py  quora.py  twitter.py  twitter_client.py  twitter_types.py
(+1136 files in other folders)
