[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "galaxyos"
version = "0.2.0"
description = "GalaxyOS — 认知增强型 AI Agent 引擎"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "GalaxyOS", email = "dev@galaxyos.ai" },
]
keywords = ["ai", "agent", "cognitive", "memory", "mcp", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=2.0.0",
    "scipy>=1.10.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    "requests>=2.31.0",
    "pyzmq>=25.0.0",
    "orjson>=3.9.0",
    "Pillow>=10.0.0",
    "polars>=1.0.0",
    "duckdb>=1.0.0",
    "jieba>=0.42.0",
    "tiktoken>=0.5.0",
    "psutil>=5.9.0",
    "openai>=1.0.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
ml = [
    "torch>=2.0.0",
    "transformers>=4.44.0",
    "onnxruntime>=1.15.0",
    "faiss-cpu>=1.7.0",
    "hnswlib>=0.8.0",
    "pandas>=2.0.0",
]
neural = [
    "ncps>=1.0.0",
]
nlp = [
    "snownlp>=0.12.0",
    "tokenizers>=0.20.0",
]
async-accel = [
    "uvloop>=0.19.0; sys_platform != 'win32'",
    "winloop>=0.6.0; sys_platform == 'win32'",
]
 mcp = [
     "fastmcp>=2.14.2,<3.0",
 ]
 tokui = [
     "fastapi>=0.110.0",
     "uvicorn>=0.29.0",
     "sse-starlette>=2.0.0",
 ]
 openjiuwen = [
     "openjiuwen>=0.1.13",
 ]
 all = [
     "galaxyos[ml,neural,nlp,async-accel,mcp,tokui,openjiuwen]",
 ]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "hatchling>=1.24.0",
]

[project.scripts]
galaxyos-mcp = "galaxyos.kernel.mcp_server_entry:main"

[project.urls]
Homepage = "https://github.com/xkzs2007/GalaxyOS-desktop"
Documentation = "https://github.com/xkzs2007/GalaxyOS-desktop#readme"
Repository = "https://github.com/xkzs2007/GalaxyOS-desktop"
Issues = "https://github.com/xkzs2007/GalaxyOS-desktop/issues"

[tool.hatch.build.targets.wheel]
packages = ["galaxyos"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = ["-v", "--tb=short", "-p", "no:warnings"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "network: marks tests that require network access",
]

[tool.coverage.run]
source = ["galaxyos"]
omit = [
    "*/__pycache__/*",
    "*/test_*",
]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
    "def __repr__",
    "raise NotImplementedError",
]
show_missing = true

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["F821", "F823"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"galaxyos/engine/**" = ["F821", "F823"]
"galaxyos/scripts/**" = ["F821", "F823"]
"galaxyos/privileged/**" = ["F821", "F823"]
"extensions/**" = ["F821", "F823"]
"services/**" = ["F821", "F823"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
show_error_codes = true
warn_unused_configs = true

[tool.maturin]
manifest-path = "extensions/galaxyos/native/Cargo.toml"
python-source = "."
module-name = "galaxyos_native"
