[package]
name = "galaxyos-desktop"
version = "0.1.4"
description = "GalaxyOS Desktop — 认知增强型 AI Agent"
authors = ["xiaoyi-claw"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

log = "0.4"

[lib]
name = "galaxyos_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]