[package]
name = "galaxyos-native"
version = "0.1.0"
edition = "2021"
description = "GalaxyOS native extensions — PIL replacement + SIMD vector compute"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
