[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "llm-memory-integration"
version = "3.2.0"
description = "LLM Memory Integration - 私有增强包"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "xkzs2007"},
]
keywords = ["llm", "memory", "rag", "embedding", "search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
recommended = [
    "pysqlite3-binary>=0.5.0",
]
search = [
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
]
async = [
    "aiohttp>=3.8.0",
]
gpu = [
    "pyopencl>=2022.1",
]
tokenize = [
    "tiktoken>=0.5.0",
]
performance = [
    "requests>=2.28.0",
]
all = [
    "llm-memory-integration[recommended,search,async,gpu,tokenize,performance]",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
]

[project.scripts]
llm-memory-acp = "acp_server:main"

[tool.setuptools.packages.find]
include = ["*"]
exclude = ["__pycache__*", "*.pyc", ".sandbox*", ".backups*"]

[tool.setuptools.package-data]
"*" = ["*.so", "*.pyd"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_suite.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
